Added a much faster water shader for low-end systems.
Compile Anura with `make CXXFLAGS=-DLOW_END_SYSTEM` to use the new shader.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -73,7 +73,8 @@ properties: {
 			add(level.frame_buffer_shaders, [{
 				begin_zorder: -10000000,
 				end_zorder: lib.zorder.get('water'),
-				shader_info: 'liquid',
+				//Note: liquid is a fairly expensive shader for us, as these things go. Use a cheaper shader for low-end units.
+				shader_info: if(not LOW_END_SYSTEM, 'liquid', 'liquid_LOW_END_SYSTEM'),
 				label: me.type,
 			}])
 		)
