--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -464,6 +464,313 @@
 		where pos = level.camera_position"
 	},
 
+	{
+		name: "liquid_LOW_END_SYSTEM",
+		new: true,
+		vertex: "
+			uniform mat4 u_anura_mvp_matrix;
+			//uniform float u_anura_cycle;
+			//uniform vec4 u_anura_sprite_area;
+			//uniform vec4 u_anura_draw_area;
+			attribute vec2 a_anura_vertex;
+			attribute vec2 a_anura_texcoord;
+			varying vec2 v_texcoord;
+			varying vec2 v_vertex;
+			void main()
+			{
+				v_vertex = a_anura_vertex;
+				gl_Position = u_anura_mvp_matrix * vec4(a_anura_vertex, 0.0, 1.0);
+				v_texcoord = a_anura_texcoord;
+			}
+		",
+		fragment: "
+			#version 120
+			uniform sampler2D u_anura_tex_map;
+			//[ADDING_WATER] If adding a new water type, add its texture sampler.
+			uniform float u_water_tex_dim[4];
+			uniform float u_water_tex_speed[4];
+			//[ADDING_WATER] If adding a new water type, increase the size of dim and speed by 1 each to accommodate the new data.
+			uniform vec4 u_camera_pos;
+			uniform float u_zoom;
+			//uniform float u_intensity;
+			uniform int u_water_count; //Can't be uint, that just... doesn't work. O_o
+			uniform vec4 u_water_area[8]; //8 water areas on screen at one time max.
+			uniform int u_water_type[8];  //The numeric water types of each area, so we know how to shade them. 1=water, 2=acid, etc.
+			uniform float u_anura_cycle;
+			uniform vec4 u_anura_draw_area;
+			//uniform vec4 u_anura_sprite_area;
+			varying vec2 v_texcoord;
+			varying vec2 v_vertex;
+			
+
+
+			
+			float ease_out_circ(float t)
+			{
+				return sqrt(1.0 - pow( (t-1.0), 2.0 ) );
+			}
+
+			float ease_in_circ(float t)
+			{
+				return 1.0 - sqrt(1.0 - pow(t, 2.0) );
+			}
+
+			float ease_in_out_circ(float t)
+			{
+				float time = t*2.0;
+
+				if(time < 1.0){ 
+					return ( 1.0 - sqrt(1.0 - pow(t,2.0) ) )/2.0;
+				} else {
+					return sqrt(1.0 - pow( (t-1.0), 2.0 ) )/2.0;
+				}
+			}
+
+			float blendOverlay(float base, float blend) {
+				return base<0.5?(2.0*base*blend):(1.0-2.0*(1.0-base)*(1.0-blend));
+			}
+
+			vec3 blendOverlay(vec3 base, vec3 blend) {
+				return vec3(blendOverlay(base.r,blend.r),blendOverlay(base.g,blend.g),blendOverlay(base.b,blend.b));
+			}
+
+			vec3 blendOverlay(vec3 base, vec3 blend, float opacity) {
+				return (blendOverlay(base, blend) * opacity + base * (1.0 - opacity));
+			}			
+
+
+			float blendScreen(float base, float blend) {
+				return 1.0-((1.0-base)*(1.0-blend));
+			}
+
+			vec3 blendScreen(vec3 base, vec3 blend) {
+				return vec3(blendScreen(base.r,blend.r),blendScreen(base.g,blend.g),blendScreen(base.b,blend.b));
+			}
+
+			vec3 blendScreen(vec3 base, vec3 blend, float opacity) {
+				return (blendScreen(base, blend) * opacity + base * (1.0 - opacity));
+			}
+		
+			void main()
+			{
+				vec2 texcoord = v_texcoord;
+				
+				/*
+					This steps over multiple water areas - it artificially limits itself to the first 8 water areas that are onscreen (this gets done not here, in the `fragment` call, but down in the `draw` call below).
+					
+					The final return value is a single pixel's color.
+					
+					Since of course this is a shader, the end result we're going for is just one single pixel's color, so any 'scanning over multiple pixels' is just to get ingredients, not to output more than one. 
+				*/
+				
+				//Find the index of the water rect whose pixel we're
+				//shading. Overlap winning is arbitrary but stable.
+				int water_index;
+				float left, top, right, bottom;
+				for(water_index = 0; water_index < u_water_count; water_index++) {
+					left = max(u_anura_draw_area[0], u_water_area[water_index][0]); //Clip the water area to the screen, so that it doesn't slide around near the edge and produce artefacts.
+					top = max(u_anura_draw_area[1], u_water_area[water_index][1]);
+					right = min(u_anura_draw_area[2], u_water_area[water_index][2]);
+					bottom = min(u_anura_draw_area[3], u_water_area[water_index][3]);
+					
+					//bounds check
+					if(
+						   v_vertex.x > left 
+						&& v_vertex.x < right 
+						&& v_vertex.y > top 
+						&& v_vertex.y < bottom
+					) {
+						break; //found water_index, stop looking
+					}
+				}
+				
+				//Don't do anything if we didn't find a water.
+				if(water_index == u_water_count) {
+					gl_FragColor = texture2D(u_anura_tex_map, texcoord);
+					gl_FragColor.a = 1.0;
+					return;
+				}
+				
+				vec4 fb_color = texture2D(u_anura_tex_map, texcoord);
+				vec4 liquid_tex_color;
+				
+				int water_type = u_water_type[water_index];
+				if( water_type == 0 ){ //Water texture
+					liquid_tex_color = vec4(0.24, 0.84, 0.95, 1);
+				} else if ( water_type == 1 ) { //Acid texture
+					liquid_tex_color = vec4(0.4, 0.79, 0.02, 1);
+				} else if ( water_type == 2 ) { //Deadly acid texture
+					liquid_tex_color = vec4(0.91, 0.13, 0.33, 1);
+				} else if ( water_type == 3 ) { //whitewater texture & movement.
+					liquid_tex_color = vec4(0.44, 0.94, 0.97, 1);
+				} else {
+					//[ADDING_WATER] If adding a new water type, specify the new mix above.
+					//No water found, just shade grey and abort *if* we get here.
+					gl_FragColor = vec4(.3,.4,.5,1); //#4c667fff, make this findable by colour picker... hopefully.
+					return;
+				}
+				
+				
+				/*
+					This section does an implementation of a 'blend mode' for the whole chunk of water.
+					
+					We start by sampling the frame buffer (i.e. the screenshot of what's on the level already), and pluck the pixel we're looking at, and ask 'what is the brightness of the pixel' - we're asking for the overall brightness, so we don't care about the hue data, we just covert to grayscale. 
+				*/
+				float fb_grayscale = (fb_color[0] + fb_color[1] + fb_color[2])/3.0;
+
+				//Populate array like this instead of using a literal because that's not supported on Macs.
+				float blur_coefficients[33];
+
+				blur_coefficients[0]  = 0.000000000232830643653869;
+				blur_coefficients[1]  = 0.000000007450580596923828;
+				blur_coefficients[2]  = 0.00000011548399925231934;
+				blur_coefficients[3]  = 0.0000011548399925231934;
+				blur_coefficients[4]  = 0.000008372589945793152;
+				blur_coefficients[5]  = 0.00004688650369644165;
+				blur_coefficients[6]  = 0.00021098926663398743;
+				blur_coefficients[7]  = 0.000783674418926239;
+				blur_coefficients[8]  = 0.002448982559144497;
+				blur_coefficients[9]  = 0.0065306201577186584;
+				blur_coefficients[10] = 0.015020426362752914;
+				blur_coefficients[11] = 0.03004085272550583;
+				blur_coefficients[12] = 0.0525714922696352;
+				blur_coefficients[13] = 0.08087921887636185;
+				blur_coefficients[14] = 0.10976465418934822;
+				blur_coefficients[15] = 0.13171758502721786;
+				blur_coefficients[16] = 0.13994993409141898;
+				blur_coefficients[17] = 0.13171758502721786;
+				blur_coefficients[18] = 0.10976465418934822;
+				blur_coefficients[19] = 0.08087921887636185;
+				blur_coefficients[20] = 0.0525714922696352;
+				blur_coefficients[21] = 0.03004085272550583;
+				blur_coefficients[22] = 0.015020426362752914;
+				blur_coefficients[23] = 0.0065306201577186584;
+				blur_coefficients[24] = 0.002448982559144497;
+				blur_coefficients[25] = 0.000783674418926239;
+				blur_coefficients[26] = 0.00021098926663398743;
+				blur_coefficients[27] = 0.00004688650369644165;
+				blur_coefficients[28] = 0.000008372589945793152;
+				blur_coefficients[29] = 0.0000011548399925231934;
+				blur_coefficients[30] = 0.00000011548399925231934;
+				blur_coefficients[31] = 0.000000007450580596923828;
+				blur_coefficients[32] = 0.000000000232830643653869;			
+
+
+
+	
+				float blur_accumulator_h = 0.;
+				for(int i = 0; i < 33; i+=2) {
+					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2( float(1 * (i - 6)) / u_anura_draw_area[2], 0.0));
+				
+					if(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0)){
+						blur_accumulator_h += blur_coefficients[i]*2;
+					}
+					
+				}
+
+				float blur_accumulator_v = 0.;
+				for(int i = 0; i < 33; i+=2) {
+					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2(0.0, float(1 * (i - 6)) / u_anura_draw_area[3]));
+				
+					if(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0)){
+						blur_accumulator_v += blur_coefficients[i]*2;
+					}
+					
+				}
+				
+				float blur_accumulator = 1.0 - mix(blur_accumulator_h, blur_accumulator_v, 0.5);
+				
+				
+				vec4 blurred_liquid = liquid_tex_color;
+				
+				blurred_liquid[3] = blur_accumulator;
+			
+				
+				vec3 screen_blended_color = blendScreen(
+					vec3( fb_color.r, fb_color.g, fb_color.b),
+					vec3( blurred_liquid.r, blurred_liquid.g, blurred_liquid.b),
+					blurred_liquid.a
+				);
+
+				vec3 overlay_blended_color = blendOverlay(
+					vec3( fb_color.r, fb_color.g, fb_color.b),
+					vec3( blurred_liquid.r, blurred_liquid.g, blurred_liquid.b),
+					blurred_liquid.a
+				);
+				
+				
+				/*
+					[ADDING_WATER] Instead of having a hard-coded value for this; it picks from an array, using 'which kind of water' we are as the index.  If you're adding a new water type, you'll need to add another entry (it won't error out if you don't, but it'll treat the value as either zero, or we might be hitting 'out of array bounds' c-style Undefined Behavior, which is bad).
+				
+					Right above here, we run a full calc of what the pixel would look like if we blend it against what's already on screen; using either the photoshop-named 'screen' blending mode, or the 'overlay' blending mode.  Here, we decide how much of each we want to go into the final pixel by tweening between the two values. 
+				*/
+				vec3 semifinal_color = mix(screen_blended_color, overlay_blended_color, 
+					float[](0.9, 0.65, 0.75, 0.55)[water_type]);
+				
+				vec4 final_color = vec4(semifinal_color.r, semifinal_color.g, semifinal_color.b, blurred_liquid.a);
+
+				
+				/*
+					[ADDING_WATER] Same routine as above.
+				
+					This one is just a plain-and-simple 'opacity slider' for the entire shader effect.  How much of the final pixel is just what was already on-screen, versus how much is based on our shader stuff.
+				*/
+				
+				gl_FragColor = mix(final_color, fb_color, 
+					float[](0.9, 0.9, 0.9, 0.9)[water_type]);
+				gl_FragColor.a = 1.0;
+			}
+		",
+		
+		create: "[//Load constant texture information into the shader, for all waters in the level.
+			set(uniform_commands.u_water_tex_dim,   [if(ctrl, ctrl.texture_dim,   1) | ctrl <- ctrls]),
+			set(uniform_commands.u_water_tex_speed, [if(ctrl, ctrl.texture_speed, 1) | ctrl <- ctrls]),
+		] where ctrls = [
+			find(level.chars, value is obj water_controller or value is obj water_controller_rising or value is obj water_controller_ocean),
+			find(level.chars, value is obj acid_controller),
+			find(level.chars, value is obj acid_deadly_controller),
+			find(level.chars, value is obj whitewater_controller),
+			//[ADDING_WATER] The index of the water found in the list must be the water type number. All liquids must be in this list.
+		]",
+
+		draw: "[//Load dynamic level information into the shader.
+			//Level information.
+			set(uniform_commands.u_camera_pos, level.camera_position),
+			set(uniform_commands.u_zoom, level.zoom),
+			
+			//Water rect information.
+			set(uniform_commands.u_water_count, size(waters)),
+			set(uniform_commands.u_water_area, fold(water_rects, a+b, [])),
+			set(uniform_commands.u_water_type, (water_types+[-1]*8)[:8]), //This array amongst all others can't be half-populated, it needs all elements.
+		]
+		asserting not -1 in water_types | 'Unknown liquid found to shade, please add it below. (In [${map(waters, value.type)}])'
+		where 
+			water_rects = [[
+				water._x_bound  - pos[0],
+				water._y_bound  - pos[1], 
+				water._x2_bound - pos[0], 
+				water._y2_bound - pos[1]
+			] | water <- waters],
+			water_types = [switch(true,
+				water is obj water_controller,        0,
+				water is obj water_controller_rising, 0,
+				water is obj water_controller_ocean,  0,
+				water is obj acid_controller,         1,
+				water is obj acid_deadly_controller,  2,
+				water is obj whitewater_controller,   3,
+				//[ADDING_WATER] If your new water is shaded like an existing water, add it above and use an existing water type number. Otherwise, add a new water type number.
+				-1
+			) | water <- waters]
+		where waters = (
+			[water
+				| water <- level.chars,
+				  water is obj liquid,
+				  rects_intersect(camera_rect, [water._x_bound, water._y_bound, water._x2_bound, water._y2_bound])
+			] where camera_rect = [pos[0], pos[1], pos[0]+pos[2], pos[1]+pos[3]]
+		)[:8]
+		where pos = level.camera_position"
+	},
+
 
 
 	{
