Worked out some debugging to allow us to announce which head is doing an attack.  Set up a more stable way of storing the chosen head in code, since a random query won't be stable if repeatedly executed.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -363,7 +363,7 @@ object_type: [ {
 			hurt_velocity_x: 0,
 
 		#-------------------------- helpers --------------------------#
-			mb_debug_active: "bool :: false",
+			mb_debug_active: "bool :: true",
 			mb_debug: "def(value) -> commands if(mb_debug_active, debug(value))",
 
 			
@@ -392,11 +392,37 @@ object_type: [ {
 			*/
 			
 			upper_stalks: "[obj mushroom_boss] <- sort(stalks, a.y < b.y)[0:2] asserting size(stalks) >= 2",
+			lower_stalks: "[obj mushroom_boss] <- sort(stalks, a.y > b.y)[0:2] asserting size(stalks) >= 2",
+			left_stalks: "[obj mushroom_boss] <- sort(stalks, a.x < b.x)[0:2] asserting size(stalks) >= 2",
+			right_stalks: "[obj mushroom_boss] <- sort(stalks, a.x > b.x)[0:2] asserting size(stalks) >= 2",
+			
+			
 			an_upper_stalk: "obj mushroom_boss :: shuffle(upper_stalks)[0]",
 		
 			all_the_other_stalks: "def(obj mushroom_boss this_one) -> [obj mushroom_boss]  filter(stalks, value != this_one)",
 
-			
+
+
+
+		_chosen_head: { type: "obj mushroom_boss", init: "find_or_die(level.chars, value is obj mushroom_boss)", persistent: false }, 
+
+
+		debug_head_choice:	"def(obj mushroom_boss the_head) -> commands
+							mb_debug(
+								if(the_head in upper_stalks,
+									if(the_head in right_stalks,
+										'upper right head',
+										'upper left head'
+									),
+									if(the_head in right_stalks,
+										'lower right head',
+										'lower left head'
+									)
+								)
+							)",	
+							
+							
+		
 			
 		#-------------------------- core behavior --------------------------#
 	/*
@@ -454,6 +480,8 @@ object_type: [ {
 																		]",
 																		
 	trigger_initial_behavior: "pick_specific_behavior( begin_spawn_acid_rain_glob )",
+
+
 			
 ###-------------------------- attack pattern handling --------------------------###
 			
@@ -467,13 +495,17 @@ object_type: [ {
 
 		begin_spawn_acid_rain_glob: "commands :: [
 									mb_debug('MODE: begin_spawn_acid_rain_glob'), 
+									set(_chosen_head, an_upper_stalk)
+									;
+									debug_head_choice(_chosen_head),
+									
 									set(_state, enum spawn_acid_rain_glob),
 									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) ),
 									
-									an_upper_stalk.set_behavior('guard'),
+									_chosen_head.set_behavior('guard'),
 									schedule(50, [
-										spawn('mushroom_boss.acid_dropper_big_shot', an_upper_stalk.x, an_upper_stalk.y, 1),
-										set(an_upper_stalk.animation, 'spit'),
+										spawn('mushroom_boss.acid_dropper_big_shot', _chosen_head.x, _chosen_head.y, 1),
+										set(_chosen_head.animation, 'spit'),
 									]),
 
 							]",
