Unhardwire close inventory key.

--- a/data/objects/gui-components/inventory-screen/inventory_screen_controller_2.cfg
+++ b/data/objects/gui-components/inventory-screen/inventory_screen_controller_2.cfg
@@ -132,6 +132,7 @@ properties: {
 
 #-------------------------- keyboard input --------------------------#
 	key_codes: "[string] :: [ 
+		// `i` is for `inventory`.
 		'i',
 		',',
 		'.',
@@ -149,6 +150,7 @@ properties: {
 	]",
 
 	active_inputs: "[InputValue] :: map(filter(key_codes, frogatto.ctrl_keyboard(value) = 1), {
+		// `i` is for `inventory`.
 		'i'			: enum close,
 		','			: enum pane_left,
 		'.'			: enum pane_right,
@@ -174,7 +176,8 @@ properties: {
 		frogatto._track_keys(),
 
 		if(pause_level, add(frogatto.cycle, 1)), //pump cycle to get keyboard inputs
-		if(cycle > 1 and frogatto.ctrl_keyboard('i') = 1, die()), //>1: Prevent open then close.
+		if(cycle > 1 and frogatto.ctrl_keyboard(frogatto.get_key_for_input(enum button_open_inventory)) = 1,
+			die()), //>1: Prevent open then close.
 	]",	
 	
 	process_individual_keypresses: "commands :: map(active_inputs, switch(value,
