Fix bug when requesting a music play.
Fix bug by which a track wasn't playing as requested.

--- a/data/level/Seaside/to-nenes-house.cfg
+++ b/data/level/Seaside/to-nenes-house.cfg
@@ -222,6 +222,7 @@
 									level.player, [~Someday, those door-to-door people\\nwill realize that kind of hard-sell tactic\\njust annoys people.~],
 									set(level.player.animation, 'emote_geez'),
 									level.player, [~The sooner, the better.~],
+									;  // `FrogattoChill.ogg` wasn't playing until this forced pause was added.
 									lib.audio.play_music(me,'FrogattoChill.ogg'), set(level.zoom, 1),
 									level.player.store_event('berds_first_speech',1))
 								] where Berd = me",
