--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -564,8 +564,14 @@ properties: {
 	use_underwater_attack: "def(InventoryItemType ability_name, function(decimal)->commands shot_commands) -> commands [
 		[
 			do_underwater_attack_cosmetics,
-			update_swim_rotation_cosmetic(0, 0),
-		],
+			update_swim_rotation_cosmetic(__dirx, __diry)
+		]
+		where __dirx = if( ctrl_left, if(ctrl_up or ctrl_down, -500, -800),
+		                  ctrl_right, if(ctrl_up or ctrl_down,  500,  800),
+		                  0)
+		where __diry = if(  ctrl_up, if(ctrl_left or ctrl_right, -500, -800),
+		                  ctrl_down, if(ctrl_left or ctrl_right,  500,  800),
+		                  0),
 		if(ability_is_charged_up(ability_name),
 			[
 				//TODO: a custom animation would be added here.
