A bunch of the code to drive the mushroom boss's spore-stream attack.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -334,6 +334,8 @@ object_type: [ {
 								frogatto.store_event('mushroom_boss_fight_won',1)
 								]) where frogatto = (obj frogatto_playable <- level.player)",
 		on_die: "[set(hitpoints,1),set(me.is_a_boss, false)]",
+
+		on_process: "process_behavior",
 								
 		
 		properties: {
@@ -398,28 +400,29 @@ object_type: [ {
 			
 			
 			an_upper_stalk: "obj mushroom_boss :: shuffle(upper_stalks)[0]",
+			any_stalk: "obj mushroom_boss :: shuffle(upper_stalks)[0]",
 		
 			all_the_other_stalks: "def(obj mushroom_boss this_one) -> [obj mushroom_boss]  filter(stalks, value != this_one)",
 
 
 
 
-		_chosen_head: { type: "obj mushroom_boss", init: "find_or_die(level.chars, value is obj mushroom_boss)", persistent: false }, 
+			_chosen_head: { type: "obj mushroom_boss", init: "find_or_die(level.chars, value is obj mushroom_boss)", persistent: false }, 
 
 
-		debug_head_choice:	"def(obj mushroom_boss the_head) -> commands
-							mb_debug(
-								if(the_head in upper_stalks,
-									if(the_head in right_stalks,
-										'upper right head',
-										'upper left head'
-									),
-									if(the_head in right_stalks,
-										'lower right head',
-										'lower left head'
+			debug_head_choice:	"def(obj mushroom_boss the_head) -> commands
+								mb_debug(
+									if(the_head in upper_stalks,
+										if(the_head in right_stalks,
+											'upper right head',
+											'upper left head'
+										),
+										if(the_head in right_stalks,
+											'lower right head',
+											'lower left head'
+										)
 									)
-								)
-							)",	
+								)",	
 							
 							
 		
@@ -456,8 +459,8 @@ object_type: [ {
 	process_behavior: "				[		
 										switch(_state,
 											enum spawn_acid_rain_glob,		process_spawn_acid_rain_glob,
-											enum spore_cloud_setup,			null,
-											enum spore_cloud_emit,			null,
+											enum spore_cloud_setup,			process_spore_cloud_setup,
+											enum spore_cloud_emit,			process_spore_cloud,
 											enum bomber_shroom_drop, 		null,
 											enum idle,						null
 										),
@@ -479,9 +482,11 @@ object_type: [ {
 																			; set(_phase_started_at, cycle)
 																		]",
 																		
-	trigger_initial_behavior: "pick_specific_behavior( begin_spawn_acid_rain_glob )",
+	trigger_initial_behavior: "pick_specific_behavior( begin_spore_cloud_setup )",
 
-
+	do_after_phase_timer: "def( commands next_commands ) -> commands [
+		if(cycle - _phase_started_at = _current_phase_random_timer, next_commands)
+	]",
 			
 ###-------------------------- attack pattern handling --------------------------###
 			
@@ -495,11 +500,11 @@ object_type: [ {
 
 		begin_spawn_acid_rain_glob: "commands :: [
 									mb_debug('MODE: begin_spawn_acid_rain_glob'), 
+									set(_state, enum spawn_acid_rain_glob),
 									set(_chosen_head, an_upper_stalk)
 									;
 									debug_head_choice(_chosen_head),
 									
-									set(_state, enum spawn_acid_rain_glob),
 									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) ),
 									
 									_chosen_head.set_behavior('guard'),
@@ -511,9 +516,8 @@ object_type: [ {
 							]",
 	
 		process_spawn_acid_rain_glob: "commands :: [
-									if(cycle - _phase_started_at = _current_phase_random_timer, pick_random_behavior)
-
-							]",
+			do_after_phase_timer( pick_random_behavior )
+		]",
 	
 	
 		
@@ -522,13 +526,71 @@ object_type: [ {
 		In this mode, the boss fires a cloud of spores that make a whole quadrant of the map deadly.
 	*/
 
+	//start with some 'chargeup' effects to telegraph the attack
+		begin_spore_cloud_setup: "commands :: [
+			mb_debug('MODE: begin_spore_cloud_setup'), 
+			set(_state, enum spore_cloud_setup),
+			set(_chosen_head, any_stalk)
+			;
+			debug_head_choice(_chosen_head),
 
+
+			set(_current_phase_random_timer, 100 )
+		]",
+
+		process_spore_cloud_setup: "commands :: [
+		
+			do_after_phase_timer( pick_specific_behavior(begin_spore_cloud) )
+		]",
+				
+				
+				
+	//the actually do the attack
 		begin_spore_cloud: "commands :: [
-									mb_debug('MODE: begin_spore_cloud'), 
-									set(_state, enum spore_cloud_setup),
-									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) )
+			mb_debug('MODE: begin_spore_cloud'), 
+			set(_state, enum spore_cloud_emit),
+			set(_chosen_head, any_stalk)
+			;
+			debug_head_choice(_chosen_head),
 
-							]",
+
+			set(_current_phase_random_timer, 500 + 1d75)
+		]",
+
+
+		process_spore_cloud: "commands :: [
+			if(level.cycle % 10 = 0,
+				do_spore_shot
+			),
+			do_after_phase_timer( pick_random_behavior ),
+		]",
+		
+		
+		do_spore_shot: "commands :: [
+			spawn('mushroom_boss.stream_shot',
+				shot_offset.x,
+				shot_offset.y,
+			{
+				velocity_x: shot_velocity.x,
+				velocity_y: shot_velocity.y,
+			})		
+		]
+			where shot_velocity = { x: decimal, y: decimal } :: { x: shot_speed * cos(shot_angle), y: shot_speed * sin(shot_angle)}
+
+			where bloom_offset =  { x: decimal, y: decimal } :: {
+				x: _chosen_head.mid_x + bloom_dist * cos(shot_angle),
+				y: _chosen_head.mid_y + bloom_dist * sin(shot_angle)
+			}
+			where shot_offset =  { x: decimal, y: decimal } :: {
+					x: _chosen_head.mid_x + shot_dist * cos(shot_angle),
+					y: _chosen_head.mid_y + shot_dist * sin(shot_angle)
+				}
+			where bloom_dist = -150
+			where shot_dist = -150
+
+			where shot_speed = (1d500 - 250)
+			where shot_angle = _chosen_head.rotate-90
+		",
 			
 #-------------------------- bomber-shroom-drop --------------------------#
 	/*
