Mostly established the spread-shot for the quadrant-denial attack.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -366,6 +366,7 @@ object_type: [ {
 
 		#-------------------------- helpers --------------------------#
 			mb_debug_active: "bool :: true",
+			mb_clear: "if(mb_debug_active, clear())",
 			mb_debug: "def(value) -> commands if(mb_debug_active, debug(value))",
 
 			
@@ -499,21 +500,22 @@ object_type: [ {
 
 
 		begin_spawn_acid_rain_glob: "commands :: [
-									mb_debug('MODE: begin_spawn_acid_rain_glob'), 
-									set(_state, enum spawn_acid_rain_glob),
-									set(_chosen_head, an_upper_stalk)
-									;
-									debug_head_choice(_chosen_head),
-									
-									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) ),
-									
-									_chosen_head.set_behavior('guard'),
-									schedule(50, [
-										spawn('mushroom_boss.acid_dropper_big_shot', _chosen_head.x, _chosen_head.y, 1),
-										set(_chosen_head.animation, 'spit'),
-									]),
+			mb_clear,
+			mb_debug('MODE: begin_spawn_acid_rain_glob'), 
+			set(_state, enum spawn_acid_rain_glob),
+			set(_chosen_head, an_upper_stalk)
+			;
+			debug_head_choice(_chosen_head),
+			
+			set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) ),
+			
+			_chosen_head.set_behavior('guard'),
+			schedule(50, [
+				spawn('mushroom_boss.acid_dropper_big_shot', _chosen_head.x, _chosen_head.y, 1),
+				set(_chosen_head.animation, 'spit'),
+			]),
 
-							]",
+		]",
 	
 		process_spawn_acid_rain_glob: "commands :: [
 			do_after_phase_timer( pick_random_behavior )
@@ -528,6 +530,7 @@ object_type: [ {
 
 	//start with some 'chargeup' effects to telegraph the attack
 		begin_spore_cloud_setup: "commands :: [
+			mb_clear,
 			mb_debug('MODE: begin_spore_cloud_setup'), 
 			set(_state, enum spore_cloud_setup),
 			set(_chosen_head, any_stalk)
@@ -549,9 +552,7 @@ object_type: [ {
 		begin_spore_cloud: "commands :: [
 			mb_debug('MODE: begin_spore_cloud'), 
 			set(_state, enum spore_cloud_emit),
-			set(_chosen_head, any_stalk)
 			;
-			debug_head_choice(_chosen_head),
 
 
 			set(_current_phase_random_timer, 500 + 1d75)
@@ -559,7 +560,7 @@ object_type: [ {
 
 
 		process_spore_cloud: "commands :: [
-			if(level.cycle % 10 = 0,
+			if(level.cycle % 5 = 0,
 				do_spore_shot
 			),
 			do_after_phase_timer( pick_random_behavior ),
@@ -573,6 +574,7 @@ object_type: [ {
 			{
 				velocity_x: shot_velocity.x,
 				velocity_y: shot_velocity.y,
+				rotate: shot_angle
 			})		
 		]
 			where shot_velocity = { x: decimal, y: decimal } :: { x: shot_speed * cos(shot_angle), y: shot_speed * sin(shot_angle)}
@@ -586,10 +588,11 @@ object_type: [ {
 					y: _chosen_head.mid_y + shot_dist * sin(shot_angle)
 				}
 			where bloom_dist = -150
-			where shot_dist = -150
+			where shot_dist = 130
 
-			where shot_speed = (1d500 - 250)
-			where shot_angle = _chosen_head.rotate-90
+			where shot_speed = (500 + 1d200)
+			where shot_angle =	(_chosen_head.rotate - 90) + /* first adjust for coordinate system */
+								(45 - 1d90) /* then apply a random factor so it's a spread shot */ 
 		",
 			
 #-------------------------- bomber-shroom-drop --------------------------#
@@ -632,8 +635,9 @@ object_type: [ {
 		always_active: true,
 		prototype: ["shot"],
 		traction_in_air: 1000,
-		friction: 1500,
+		friction: 0000,
 		on_collide_level: "null",
+		collide_dimensions: ["~player","~enemy","~hazard","~obstruction"],
 		zorder: "@include data/zorder.cfg:in_front_of_parallax_objects",
 		
 		on_create: "[
@@ -643,7 +647,7 @@ object_type: [ {
 			set(rotate, 1d360),
 			spawn('mushroom_boss.big_shot_impact',mid_x,mid_y,facing)
 		]",
-		on_process: "",
+		on_process: "set(velocity_xy, [velocity_xy.x * 0.99, velocity_xy.y * 0.99]) ",
 		on_end_anim: "[animation('normal'),set(rotate, 1d360)]",
 		
 		properties: {
@@ -659,6 +663,7 @@ object_type: [ {
 			id: "normal",
 			image: "enemies/mushroom-boss-shots.png",
 			rect: [1,109,18,126],
+			accel_y: 0,
 			duration: 2,
 			frames: 8,
 			pad: 3,
