Fixed a couple issues preventing the spore attack from hitting all four quadrants.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -401,7 +401,7 @@ object_type: [ {
 			
 			
 			an_upper_stalk: "obj mushroom_boss :: shuffle(upper_stalks)[0]",
-			any_stalk: "obj mushroom_boss :: shuffle(upper_stalks)[0]",
+			any_stalk: "obj mushroom_boss :: shuffle(stalks)[0]",
 		
 			all_the_other_stalks: "def(obj mushroom_boss this_one) -> [obj mushroom_boss]  filter(stalks, value != this_one)",
 
@@ -471,7 +471,7 @@ object_type: [ {
 	pick_random_behavior: "commands :: [
  											switch(_behavior_mode_prng.get_next_value,
  												0, ;	begin_spawn_acid_rain_glob,
- 												1, ;	begin_spore_cloud,
+ 												1, ;	begin_spore_cloud_setup,
  												2, ;	begin_bomber_shroom_drop,
  											),
 											_behavior_mode_prng.iterate_random_pool,
