Did a bunch of work on adding the acid rain glob attack.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -366,7 +366,7 @@ object_type: [ {
 
 		#-------------------------- helpers --------------------------#
 			mb_debug_active: "bool :: true",
-			mb_clear: "if(mb_debug_active, clear())",
+			mb_clear: "commands :: null", //"if(mb_debug_active, clear())",
 			mb_debug: "def(value) -> commands if(mb_debug_active, debug(value))",
 
 			
@@ -472,7 +472,7 @@ object_type: [ {
  											switch(_behavior_mode_prng.get_next_value,
  												0, ;	begin_spawn_acid_rain_glob,
  												1, ;	begin_spore_cloud_setup,
- 												2, ;	begin_bomber_shroom_drop,
+ 												2, ;	begin_spawn_acid_rain_glob, //begin_bomber_shroom_drop,
  											),
 											_behavior_mode_prng.iterate_random_pool,
 											; set(_phase_started_at, cycle)
@@ -486,7 +486,10 @@ object_type: [ {
 	trigger_initial_behavior: "pick_specific_behavior( begin_spore_cloud_setup )",
 
 	do_after_phase_timer: "def( commands next_commands ) -> commands [
-		if(cycle - _phase_started_at = _current_phase_random_timer, next_commands)
+		//debug(cycle, _phase_started_at, cycle - _phase_started_at, _current_phase_random_timer),
+		if(cycle - _phase_started_at = _current_phase_random_timer,
+			[ ; next_commands ]
+		)
 	]",
 			
 ###-------------------------- attack pattern handling --------------------------###
@@ -506,19 +509,17 @@ object_type: [ {
 			set(_chosen_head, an_upper_stalk)
 			;
 			debug_head_choice(_chosen_head),
-			
-			set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) ),
+			set(_current_phase_random_timer, 800 + 1d200 ),
 			
 			_chosen_head.set_behavior('guard'),
-			schedule(50, [
-				spawn('mushroom_boss.acid_dropper_big_shot', _chosen_head.x, _chosen_head.y, 1),
-				set(_chosen_head.animation, 'spit'),
-			]),
-
 		]",
 	
 		process_spawn_acid_rain_glob: "commands :: [
-			do_after_phase_timer( pick_random_behavior )
+			if(cycle - _phase_started_at = 50, [
+				spawn('mushroom_boss.acid_dropper_big_shot', _chosen_head.x, _chosen_head.y, {lifetime: _current_phase_random_timer}),
+				set(_chosen_head.animation, 'spit'),
+			]),
+			do_after_phase_timer( [debug('after_timer'),pick_random_behavior] )
 		]",
 	
 	
@@ -602,7 +603,7 @@ object_type: [ {
 
 
 		begin_bomber_shroom_drop: "commands :: [
-									mb_debug('MODE: begin_spore_cloud'), 
+									mb_debug('MODE: bomber_shroom_drop'), 
 									set(_state, enum spore_cloud_setup),
 									set(_current_phase_random_timer, 50 + (100 + 640) + (50 + 1d75) )
 
@@ -779,15 +780,17 @@ object_type: [ {
 		properties: {
 			#-------------------------- prototype behavior --------------------------#
 			altitude_adjustment: "( sin(cycle*5+1000)/50)",
-
+			lifetime: { type: "int", dynamic_initialization: true }, 
 
 			player_pos: "level.player.mid_xy",
+			
+			custom_process_fly: "if(me.cycle > lifetime, force_death())",
 		},
 		
 		
 		on_end_anim: "set(animation, animation)",
 		
-		on_timer: "me.fly_to([{x: player_pos.x, y: player_pos.y - 100}]) ",
+		on_timer: "me.fly_to([{x: player_pos.x, y: player_pos.y - 250}]) ",
 		timer_frequency: 15,
 		
 		animation: [{
