--- a/data/object_prototypes/enemies_general_types/seeker_flying.cfg
+++ b/data/object_prototypes/enemies_general_types/seeker_flying.cfg
@@ -120,6 +120,7 @@ properties: {
 	process_fly_specialized: "[
 								process_seeker_fly,
 								maybe_set_desired_height,
+								custom_process_fly,
 							]",
 	
 	process_fly: "commands :: if(_target_pos = null, process_fly_internal)",
@@ -131,6 +132,7 @@ properties: {
 	desired_height_is_final_target_pos: "bool :: true",
 	maybe_set_desired_height: "commands :: if(desired_height_is_final_target_pos, set(_desired_height, mid_y))",
 
+	custom_process_fly: "commands :: null", //hook for unique creature/shot types
 
 
 },
