Fix #422, water beetles crash the game when tongued.

--- a/data/objects/enemies/bugs/beetle_water.cfg
+++ b/data/objects/enemies/bugs/beetle_water.cfg
@@ -134,6 +134,7 @@ object_type: [
 			springiness: 0,
 			spring_amount: 0,
 			taxonomy: "TaxonomyType :: enum bug",
+			thrown_type: "string :: 'beetle_water.thrown'",
 		},
 
 		on_exit_water: "spawn('beetle_water',mid_x,mid_y,{facing: facing, hitpoints: hitpoints})",
