Fix #435, "Helicopter plant won't lose his rotor, after swallowing and spitting the plant".

--- a/data/objects/enemies/plants/helicopter_plant.cfg
+++ b/data/objects/enemies/plants/helicopter_plant.cfg
@@ -12,7 +12,9 @@ properties: {
 #-------------------------- constructor/destructor logic --------------------------#
 specialized_creature_category_constructor: "commands :: [
 				facing(1),
-				spawn('helicopter_plant.rotor', midpoint_x, y, {facing: facing, parent: me, relative_x: 0, relative_y: -22 }),
+				if(not find(spawned_children, value is obj helicopter_plant.rotor),
+					spawn('helicopter_plant.rotor', midpoint_x, y, 
+						{facing: facing, parent: me, relative_x: 0, relative_y: -22} ) ),
 				set(accel_y,40),
 				set(_target_y, y)
 			]",
