--- a/data/objects/enemies/plants/shooting_plant.cfg
+++ b/data/objects/enemies/plants/shooting_plant.cfg
@@ -97,6 +97,12 @@ object_type: [
 				taxonomy: "TaxonomyType :: enum plant",
 			},
 			solid_area: [5,8,19,21],
+			
+			//The helicopter plant becomes a standard shooting plant when you eat it. Remove its rotor if it has gifted us one.
+			on_been_grabbed: "
+				if(rotor, set(rotor.hitpoints, 0))
+					where rotor = find(spawned_children, value is obj helicopter_plant.rotor)",
+			
 			animation: [
 				{
 					image: "enemies/plant-shooting.png",
