Fixed a bug where the bomb particle will stay after swallowing the bomb

--- a/data/objects/enemies/bugs/moth_bomber_bomb.cfg
+++ b/data/objects/enemies/bugs/moth_bomber_bomb.cfg
@@ -38,6 +38,9 @@
 										force_death()
 									)
 								)",
+							
+	on_been_grabbed: "
+		if(my_particles, remove_object(my_particles))",						
 	
 	on_die:  "[
 		spawn('explosion_big_harmful',midpoint_x,midpoint_y-32,facing),
