Added some comments and stuff that came out of a mental prep session for unifying the hittable/effects attache APIs.  This is a project we won't be doing right now, because pre-release stability is more important.

--- a/data/object_prototypes/base/effects_attache.cfg
+++ b/data/object_prototypes/base/effects_attache.cfg
@@ -63,7 +63,10 @@ properties: {
 										;
 										schedule_death_cleanup
 									])",
-
+	
+		/*
+			"What the hell is this?"  -- Remember that a primary use case for effects_attaches is stuff like particles which can't end abruptly.  So there pretty much *isn't* an API call for terminating them instantly - THE standard way we remove them is deferred rather than immediate, and this is it. 
+		*/
 	schedule_death_cleanup: "commands :: execute(me, [
 								turn_off,
 								set(always_active, true),
@@ -129,14 +132,7 @@ timer_frequency: 10,
 on_timer: "debug_check",
 
 
-	//we're using this semi-obscure event to help prevent overwriting of necessary behavior, since overriding on_create without calling the superclass implementation is extremely common.  Virtually nothing uses this event, so it's almost certain not to be overridden.
-/*
-on_create: "constructor",
-on_spawned: "constructor",
-on_being_added: "constructor",
 
-on_being_removed: "destructor",
-*/
 
 animation: {
 	id: "normal",
