Fixed a really dumb typo.

--- a/data/object_prototypes/base/hittable_attache.cfg
+++ b/data/object_prototypes/base/hittable_attache.cfg
@@ -14,7 +14,10 @@ properties: {
 
 	do_setup: "[]",
 
-},
+
+
+#-------------------------- vars --------------------------#
+	custom_relative_pos_default: { type: "{mid_x: decimal, mid_y: decimal}|null", default: null },
 
 
 #-------------------------- connections --------------------------#
@@ -52,6 +55,7 @@ properties: {
 			I think our goal in refactoring it is we should really eliminate that "magic" in the matched `scheduled_death_at` and `recorded_transfer_at` calls -- specifically because the way they're designed right now plays poorly with immediate deaths, and just generally is a bad/brittle code style.
 		*/
 	//schedule_death_cleanup: "commands :: execute(me, [])",
+},
 
 
 #-------------------------- collision event handling --------------------------#
