Set up the hovering acid glob to actually shoot at the player, and have the right effects for the shots hitting.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -365,7 +365,7 @@ object_type: [ {
 			hurt_velocity_x: 0,
 
 		#-------------------------- helpers --------------------------#
-			mb_debug_active: "bool :: true",
+			mb_debug_active: "bool :: false",
 			mb_clear: "commands :: null", //"if(mb_debug_active, clear())",
 			mb_debug: "def(value) -> commands if(mb_debug_active, debug(value))",
 
@@ -778,13 +778,29 @@ object_type: [ {
 		solid_area: null,
 		
 		properties: {
+			acquirable_item_drop_value: "0",
+		
 			#-------------------------- prototype behavior --------------------------#
 			altitude_adjustment: "( sin(cycle*5+1000)/50)",
 			lifetime: { type: "int", dynamic_initialization: true }, 
 
 			player_pos: "level.player.mid_xy",
 			
-			custom_process_fly: "if(me.cycle > lifetime, force_death())",
+			custom_process_fly: "[
+				if(me.cycle%150 = 0, [
+					spawn('explosion_acid_big', mid_x, mid_y, 1),
+					spawn('mushroom_boss.acid_dropper_projectile', mid_x, mid_y, {
+						velocity_y: 400,
+					})
+				]),
+				
+				
+				if(me.cycle > lifetime, force_death()),
+			]",
+			
+			death_effects: "def(string type) -> commands [
+				play_death_effects('acid', enum big),
+			]",
 		},
 		
 		
@@ -801,6 +817,7 @@ object_type: [ {
 			frames: 9,
 			frames_per_row: 3,
 			pad: 3,
+			attack_area: "all",
 		},{
 			id: "normal",
 		},{
@@ -812,6 +829,37 @@ object_type: [ {
 			accel_x: 10,
 		}],
 	},
+	{
+		id: "acid_dropper_projectile",
+		prototype: ["shot"],
+		always_active: true,
+		solid_area: null,
+		properties: {
+			death_effects: "def(string type) -> commands [
+				play_death_effects('acid', enum small),
+				spawn('explosion_acid_big', mid_x, mid_y, 1),
+			]",
+		},
+		
+		
+		
+		on_create: "schedule(100, force_death())",
+
+		on_end_anim: "set(animation, animation)",
+		
+		animation: {
+			id: "normal",
+			image: "effects/particles5.png",
+			rect: [289,161,317,189],
+			frames: 7,
+			pad: 3,
+			duration: 2,
+			accel_y: 40,
+			attack_area: "all",
+		},
+
+	},
+
 	{
 		id: "big_shot_impact",
 		always_active: true,
