implemented an acid particle effect to be used with the floating acid blob in the mushroom boss.

--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -115,6 +115,7 @@ properties: {
 		'fuse_sparks': ['fuse_sparks'],
 		'energy_shot_contrail': ['blue_energy_motes_small', 'electric_sparks'],
 		'arcane_shot_contrail': ['arcane_motes_small'],
+		'acid_shot_contrail': ['acid_motes_small'],
 		'smoky_fire_shot_contrail': ['2_fire_med', '0_fire_smoke'],
 	}",
 
@@ -981,6 +982,45 @@ particle_system: [
 			frames: 6,
 			duration: 4,
 			pad: 3,
+		}],
+	},
+	{
+		id: "acid_motes_small",
+		type: "simple",
+		spawn_rate: 300,
+		time_to_live: 36,
+		min_x: -15,
+		max_x: 15,
+		min_y: -15,
+		max_y: 15,
+		velocity_y: -500,
+		velocity_x: -500,
+		velocity_x_random: 1000,
+		velocity_y_random: 1000,
+		animation: [{
+			no_remove_alpha_borders: true,
+			id: "normal",
+			image: "effects/particles5.png",
+			rect: [1,225,29,253],
+			frames: 8,
+			pad: 3,
+			duration: 4,
+		},{
+			no_remove_alpha_borders: true,
+			id: "normal",
+			image: "effects/particles5.png",
+			rect: [225,193,253,221],
+			frames: 9,
+			pad: 3,
+			duration: 4,
+		},{
+			no_remove_alpha_borders: true,
+			id: "normal",
+			image: "effects/particles5.png",
+			rect: [1,193,29,221],
+			frames: 7,
+			pad: 3,
+			duration: 4,
 		}],
 	},
 ],
