--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -519,7 +519,7 @@ object_type: [ {
 				spawn('mushroom_boss.acid_dropper_big_shot', _chosen_head.x, _chosen_head.y, {lifetime: _current_phase_random_timer}),
 				set(_chosen_head.animation, 'spit'),
 			]),
-			do_after_phase_timer( [debug('after_timer'),pick_random_behavior] )
+			do_after_phase_timer( pick_random_behavior )
 		]",
 	
 	
@@ -843,7 +843,10 @@ object_type: [ {
 		
 		
 		
-		on_create: "schedule(100, force_death())",
+		on_create: "[
+			schedule(100, force_death()),
+			spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'acid_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+		]",
 
 		on_end_anim: "set(animation, animation)",
 		
