Attached a similar, bigger version of the acid particles to the actual cloud.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -804,6 +804,27 @@ object_type: [ {
 		},
 		
 		
+		on_create: "[
+			spawn('legacy_particle_attache', mid_x, mid_y, {
+				_particle_type: 'acid_shot_contrail',
+				parent: me,
+				time_to_die: 150,
+				zsub_order: -1,
+				zorder: me.zorder -1,
+
+				customized_spawn_rects: [{
+					particle_id: 'acid_motes_small',
+					rect: [ -35, 35, -35, 35 ],
+				}],
+
+				customized_spawn_rates: [{
+					particle_id: 'acid_motes_small',
+					magnitude: 600,
+				}],
+			}),
+		
+		]",
+		
 		on_end_anim: "set(animation, animation)",
 		
 		on_timer: "me.fly_to([{x: player_pos.x, y: player_pos.y - 250}]) ",
@@ -845,7 +866,12 @@ object_type: [ {
 		
 		on_create: "[
 			schedule(100, force_death()),
-			spawn('legacy_particle_attache', mid_x, mid_y, {_particle_type: 'acid_shot_contrail', parent: me, time_to_die: 150, zsub_order: -1 }),
+			spawn('legacy_particle_attache', mid_x, mid_y, {
+				_particle_type: 'acid_shot_contrail',
+				parent: me,
+				time_to_die: 150,
+				zsub_order: -1
+			}),
 		]",
 
 		on_end_anim: "set(animation, animation)",
