Prospective change where effects_attaches do run 'do_setup' every time on_being_added triggers, but don't run their whole constructor.

--- a/data/object_prototypes/base/effects_attache.cfg
+++ b/data/object_prototypes/base/effects_attache.cfg
@@ -132,6 +132,14 @@ timer_frequency: 10,
 on_timer: "debug_check",
 
 
+on_being_added: "
+	/*
+		Unlike the transient object constructor - we DO want to always try running do_setup in the particular case of being added to the level (i.e. after being spat back out.  The rest can be guarded and try to only run once, but do_setup should run every time, and anything that needs to happen only once should go in the proper constructor.
+	*/
+	[
+		proto_event('transient_object', 'being_added'),
+		do_setup,
+	]",
 
 
 animation: {
