Getting in a bugfix for the orphaned attache issue on the moth bomber's bombs.

--- a/data/objects/enemies/bugs/moth_bomber_bomb.cfg
+++ b/data/objects/enemies/bugs/moth_bomber_bomb.cfg
@@ -22,17 +22,17 @@
 			})",
 		},
 
+		throwable_object_contructor: "[
+			debug('throwable_object_contructor ${addr(me)}'),
+			set(fall_through_platforms, 10000),
+			sound('fuse-long.ogg'),
+			add_object(my_particles),
+			add_object(light_circular),
+		]",
 	},
 	solid_area: [9,11,15,17],
 
 
-	on_create: "[
-		set(fall_through_platforms, 10000),
-		sound('fuse-long.ogg'),
-		add_object(my_particles),
-		add_object(light_circular),
-	]",
-	
 	on_collide_object_attack: "	if(arg.collide_with is obj hittable,
 									if(area_condition(arg.collide_with_area) and team_condition(arg.collide_with),
 										force_death()
