--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -2855,6 +2855,7 @@ object_type: [
 		on_die: "[
 			if(_swallowed and _swallowed.physical_size > 8, [
 				_frog.fill_stomach(_swallowed, enum with_swallow_anim),
+				remove_attaches_from_level(_swallowed),
 			]),
 			set(_shaft.hitpoints, 0), 
 			//set(_shaft, null),
@@ -2862,6 +2863,8 @@ object_type: [
 			//set(_froghead, null), 
 			set(_frog._tongue_tip, null), 
 			if((not _swallowed) and _frog.underwater, set(_frog.has_feet, false)),
+			
+			
 		]",
 
 		// If we snag something early, fast-forward us to where the tongue is at the same position, but retracting.
@@ -2889,8 +2892,9 @@ object_type: [
 				set(_swallowed, throwable_obj),
 				set(throwable_obj.event_handlers, collide_obj.event_handlers),
 				if(collide_obj is obj throwable, set(throwable_obj.juggled, (obj throwable <- collide_obj).juggled)),
+				debug('frogatto remap'),
 				remap_attaches_from_old_to_new( collide_obj, throwable_obj),
-				remove_attaches(collide_obj),
+				remove_attaches_from_level(collide_obj),
  
 			
 				if(collide_obj.physical_size > 8,[  //things below this get 'consumed' rather than becoming spittable
