--- a/data/object_prototypes/base/transient_object.cfg
+++ b/data/object_prototypes/base/transient_object.cfg
@@ -28,7 +28,7 @@ properties: {
 			]
 		)",
 		
-	remove_attaches: "def(obj transient_object the_obj) -> commands
+	remove_attaches_from_level: "def(obj transient_object the_obj) -> commands
 		map(the_obj._all_attaches, [
 			remove_object(value),
 //			debug('removing ' + str(value.type) + ' from ' + str(the_obj.type))
@@ -88,6 +88,7 @@ properties: {
 
 	
 	transient_obj_destructor: "commands :: execute(me,[
+					debug('transient_obj_destructor ${me.type}'),
 					map(me._effects_attaches, value.schedule_death_cleanup)
 				])",
 
