Put in a working proof-of-concept for healing variable references in effects attaches.

--- a/data/object_prototypes/base/effects_attache.cfg
+++ b/data/object_prototypes/base/effects_attache.cfg
@@ -39,13 +39,20 @@ properties: {
 		In order to pass these along, we need some kind of indication - some sort of obvious 'tag' on the objects, that provides a clear and unambiguous 1-to-1 association between "a variable in the parent" and "an attache referenced by that variable".   The most clear and direct way to do that would be to pass in the actual name of the variable, which is guaranteed to be unique within that context.
 		
 		It's a little tedious, but it should actually be slightly robust in terms of testing - if these are ever missing, we don't get any useful errors, which sucks.   If they're "present but incorrect", though, we'll get an excellent slap-on-the-wrist that we've tried to assign something to an invalid variable name.
+
+
+		TODO:  in the distant future, it'd be nice to refactor this whole system; this problem here is caused because we don't have introspection in the engine to map over an object's properties, and find one that 'matches' a given child.  Right now, objects are stored in two separate places in a parent - in direct variable references, and in an `_effects_attaches` array.  If we eliminated this, and made `_effects_attaches` into a dictionary, then we actually -could- map over the keys.  We could do a simple map over them to get the key when we were initially created, and then have that key from then on to re-assign ourselves later.   For now, we will type them in manually just to get this fixed, quickly.
+
+
 	*/
-//	variable_name: { type: "string|null" },
-//	possibly_restore_parent_reference: "commands :: [
-//		if(me.signature,
-//			set(_parent_obj[variable_name]), me)
-//		)
-//	]",
+	variable_name: { type: "string|null" },
+	
+	possibly_restore_parent_reference: "commands :: [
+		if(me.variable_name,
+			set(_parent_obj[variable_name], me)
+		)
+	]",
+
 
 
 
