--- a/data/object_prototypes/base/transient_object.cfg
+++ b/data/object_prototypes/base/transient_object.cfg
@@ -22,11 +22,17 @@ properties: {
 
 
 	readd_attaches: "def(obj transient_object new_obj) -> commands
-		map(new_obj._all_attaches, 
-			[
-				add_object(value),
-			]
-		)",
+		[
+			map(new_obj._effects_attaches,
+				value.possibly_restore_parent_reference
+			)
+			;
+			map(new_obj._all_attaches, 
+				[
+					add_object(value),
+				]
+			)
+		]",
 		
 	remove_attaches_from_level: "def(obj transient_object the_obj) -> commands
 		map(the_obj._all_attaches, [
