--- a/data/objects/enemies/plants/super_shooting_plant.cfg
+++ b/data/objects/enemies/plants/super_shooting_plant.cfg
@@ -25,7 +25,7 @@ on_end_chargeup_anim: "if(anim_repeat > chargeup_repeat,
 on_end_shoot_anim: "animation('normal')",
 
 on_shoot: 	"[
-				spawn('super_shooting_plant.pollen_ball_huge', mid_x, mid_y + if(not upside_down, 0, 40), {facing: facing, velocity_y: 500*upside_down-500, upside_down: upside_down}),
+				spawn('super_shooting_plant.pollen_ball_huge', mid_x, if(down = 1, mid_y - 40, mid_y + 40), {facing: facing, velocity_y: 500*upside_down-500, upside_down: upside_down}),
 				sound('pollen-shot.wav'),
 			]",
 
