Fixed a couple variable names.

--- a/data/objects/enemies/bugs/moth_bomber_bomb.cfg
+++ b/data/objects/enemies/bugs/moth_bomber_bomb.cfg
@@ -16,7 +16,7 @@
 				parent: me,
 				time_to_die: 50,
 				custom_relative_pos_default: {mid_x: -10, mid_y: -10},
-				variable_name: 'thy_particles',
+				variable_name: 'my_particles',
 			})",
 		},
 
@@ -28,6 +28,7 @@
 				parent: me,
 				custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
 				scale: 0.25,
+				variable_name: 'light_circular',
 			})",
 		},
 
