Fixed a really bad categorization that made me take forever to find something in the editor.

--- a/data/objects/props/furniture-dungeon/fireplace_milgram.cfg
+++ b/data/objects/props/furniture-dungeon/fireplace_milgram.cfg
@@ -9,7 +9,7 @@ prototype: ["triggerable"],
 platform_area: [9,11,70,12],
 
 editor_info: {
-	category: "decor, seaside",
+	category: "decor, milgram",
 },
 
 properties: {
