Made fireplaces use a constructor instead of on_create so they correctly redo their attaches when loading from a save.

--- a/data/object_prototypes/general/switches_and_triggers/triggerable.cfg
+++ b/data/object_prototypes/general/switches_and_triggers/triggerable.cfg
@@ -4,6 +4,14 @@ prototype: ["transient_object"],
 // we want to force any object that can be triggered to definitely provide the following:
 
 properties: {
+#-------------------------- constructor/destructor --------------------------#
+	visual_obj_constructor: "commands :: triggerable_obj_constructor",
+	triggerable_obj_constructor: "commands :: null",
+
+
+
+
+#-------------------------- core behavior --------------------------#
 	event: { type: "string", default:"", editor_info: { type: "string" } },
 	event_status:  "if(temporarily_lock_event_state != null, temporarily_lock_event_state, level.player.get_stored_event(event) )",
 
