--- a/data/objects/props/furniture-dungeon/fireplace_milgram.cfg
+++ b/data/objects/props/furniture-dungeon/fireplace_milgram.cfg
@@ -83,20 +83,20 @@ properties: {
 				scale_factor: 1.40,
 				zorder: me.zorder,
 			})",
-	}
+	},
+#-------------------------- constructor/destructor --------------------------#
+	triggerable_obj_constructor: "commands :: [
+		set(sfx.starts_with_sound_on, _is_burning__internal)
+		;
+		add_object(sfx),
+		add_object(fire_particles)
+		;
+		if(_is_burning__internal, ignite, extinguish)
+	]",
 
 },
 
 
-on_create: "[
-				set(sfx.starts_with_sound_on, _is_burning__internal)
-				;
-				add_object(sfx),
-				add_object(fire_particles)
-				;
-				if(_is_burning__internal, ignite, extinguish)
-
-			]",
 
 on_end_normal_anim: "animation('normal')",
 on_end_burn_anim: "[animation('burn'), set(time_in_animation,1d10)]",
