Change the gate object to have its solid animation be the default one, so that for the initial processing frame, it'll collide with the level and throw an assert if it's placed incorrectly.

--- a/data/objects/props-interactive/obstacles/gate.cfg
+++ b/data/objects/props-interactive/obstacles/gate.cfg
@@ -15,7 +15,7 @@ editor_info: {
 },
 
 properties: {
-	locks: "filter(level.chars, value is obj padlock and abs(lib.math.length(context.me, value)) < 100)",
+	locks: "[obj padlock] :: filter(level.chars, value is obj padlock and abs(lib.math.length(context.me, value)) < 100)",
 	
 	test_locks: "def(object possible_key) -> commands map(locks, 'lock', 
 								if(possible_key is obj padlock_key,
@@ -77,16 +77,16 @@ on_process: "
 					if(animation = 'unlocked',
 						[
 							set(animation, 'closing'),
-							fire_event( portcullis,'lock'),
-							schedule(10,sound('gate-close.ogg')),
+						//	fire_event( portcullis,'lock'),
+						//	schedule(10,sound('gate-close.ogg')),
 						],
 						set(animation, 'locked')
 					),
 					if(animation = 'locked',
 						[
 							set(animation, 'opening'),
-							fire_event( portcullis,'unlock'),
-							sound('gate-open.ogg'),
+						//	fire_event( portcullis,'unlock'),
+						//	sound('gate-open.ogg'),
 						],
 						set(animation, 'unlocked')
 					)
@@ -103,14 +103,14 @@ animation: [
 		frames: 1,
 		rect: [2,2,39,120],
 	},
-	{
-		id: "unlocked",
-		solid_area: [8,20,21,30],
+	{  //it's really important the 'locked' animation is the default one, because this will throw an assert on frame one if the object is placed in a bad position in the level.
+		id: "locked",
+		solid_area: [8,20,21,93],
 		duration: 30,
 	},
 	{
-		id: "locked",
-		solid_area: [8,20,21,93],
+		id: "unlocked",
+		solid_area: [8,20,21,30],
 		duration: 30,
 	},
 	{
